--- a/application/index/view/production_records/edit_view.html
+++ b/application/index/view/production_records/edit_view.html
@@ -18,6 +18,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">员工</label>
             <div class="layui-input-block" >
+                <input type="text" class="layui-input"  value="{$logList.hr_id|getUserName}" disabled >
                 <input type="text" class="layui-input" name="hr_id" value="{$logList.hr_id}" disabled >
             </div>
         </div>
