--- a/application/index/view/public/left.html
+++ b/application/index/view/public/left.html
@@ -226,6 +226,12 @@
                             <cite>在制和已制</cite>
                         </a>
                     </li >
+                    <li>
+                        <a _href="{:url('index/ProductionRecords/toExmine',['tag'=>0])}">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>生产审核</cite>
+                        </a>
+                    </li >
                     <!--<li>-->
                         <!--<a _href="{:url('index/task/alreadyTask')}">-->
                             <!--<i class="iconfont">&#xe6a7;</i>-->
