--- a/application/index/view/order/order_edit_detail.html
+++ b/application/index/view/order/order_edit_detail.html
@@ -17,6 +17,13 @@
         <input type="text" id="plan_qty"  name="plan_qty" value="{$ordeDetailRow.plan_qty}"  lay-verify="required" autocomplete="off" class="layui-input" >
       </div>
     </div>
+    <div class="layui-form-item">
+      <label for="plan_qty" class="layui-form-label">订单数量</label>
+      <span style="color: red">*</span>
+      <div class="layui-input-inline">
+        <input type="text" id="order_qty"  name="order_qty" value="{$ordeDetailRow.order_qty}"  lay-verify="required" autocomplete="off" class="layui-input" >
+      </div>
+    </div>
     <!--<div class="layui-form-item">-->
       <!--<label for="arrange" class="layui-form-label">加工安排</label>-->
         <!--<div class="layui-input-inline" style="width: 120px;">-->
@@ -68,12 +75,9 @@
           });
       </script>
     </div>
-    <div class="layui-form-item">
-      <label for="purchase_id" class="layui-form-label">备料单编号</label>
       <div class="layui-input-inline">
-        <input type="text" id="client_id" name="purchase_id" value="{$ordeDetailRow.purchase_id}" autocomplete="off" class="layui-input" >
+        <input type="hidden" id="client_id" name="purchase_id" value="{$ordeDetailRow.purchase_id}" autocomplete="off" class="layui-input" >
       </div>
-    </div>
 
 
     <div class="layui-form-item">
