--- a/application/index/view/blueprint/add-drawing-detial.html
+++ b/application/index/view/blueprint/add-drawing-detial.html
@@ -179,6 +179,13 @@
             </div>
         </div>
         <div id="materialDiv">
+            <div class="layui-form-item" id="thickness2">
+                <label class="layui-form-label">毛坯</label>
+                <div class="layui-input-inline">
+                    <input type="text" name="username" lay-verify="required" placeholder="请输入" autocomplete="off"
+                           class="layui-input" id="thickness2Input">
+                </div>
+            </div>
             <div class="layui-form-item" id="thickness">
                 <label class="layui-form-label">厚度</label>
                 <div class="layui-input-inline">
@@ -346,6 +353,7 @@
         var materialSelectId;
 
         $("#thickness").hide(); //厚度
+        $("#thickness2").hide(); //厚度
         $("#length").hide();//长度
         $("#width").hide();//宽度
         $("#altitude").hide();//高度
@@ -360,6 +368,7 @@
             $("#addwebsql").hide();//保存按钮
 
             $("#thickness").hide(); //厚度
+            $("#thickness2").hide(); //厚度
             $("#length").hide();//长度
             $("#width").hide();//宽度
             $("#altitude").hide();//高度
@@ -376,6 +385,7 @@
         });
 
         $("#thickness").show(); //厚度
+        $("#thickness2").show(); //厚度
         $("#length").show();//长度
         $("#width").show();//宽度
         $("#addwebsql").hide();//保存按钮
@@ -403,6 +413,8 @@
             switch (materialSelect){
                 case 1:
                     $("#thickness").show(); //厚度
+                    $("#thickness > label").text("厚度");
+                    $("#thickness2").show(); //厚度
                     $("#length").show();//长度
                     $("#width").show();//宽度
                     $(".specialDiv").show();//保证
@@ -421,6 +433,7 @@
 
 
                     $("#thickness").hide(); //厚度
+                    $("#thickness2").hide(); //厚度
                     $("#altitude").hide();//高度
                     $("#sideLength1").hide();//边长1
                     $("#sideLength2").hide();//边长2
@@ -435,6 +448,7 @@
                     $("#altitude").hide();//高度
                     $("#width").hide();//宽度 ->腿宽
                     $("#thickness").hide(); //厚度 ->腰厚
+                    $("#thickness2").hide(); //厚度 ->腰厚
                     $("#sideLength1").hide();//边长1
                     $("#sideLength2").hide();//边长2
                     materialSelectId = 3;
@@ -442,6 +456,7 @@
                 case 4:
                     $("#length").show();//长度
                     $("#thickness").show(); //厚度 ->管厚
+                    $("#thickness2").show();
                     $("#thickness > label").text("管厚");
                     $("#width").show();//宽度 ->大径
                     $("#width > label").text("大径");
@@ -460,6 +475,7 @@
                     $("#sideLength1").hide();//边长1
                     $("#sideLength2").hide();//边长2
                     $("#thickness").hide(); //厚度
+                    $("#thickness2").hide(); //厚度
                     $("#width").hide();//宽度
                     $("#altitude").hide();//高度
                     materialSelectId = 5;
@@ -472,6 +488,7 @@
                     $("#sideLength1").hide();//边长1
                     $("#sideLength2").hide();//边长2
                     $("#thickness").hide(); //厚度
+                    $("#thickness2").hide(); //厚度
                     $("#width").hide();//宽度
                     $("#altitude").hide();//高度
                     materialSelectId = 6;
@@ -484,6 +501,7 @@
                     $("#sideLength1").hide();//边长1
                     $("#sideLength2").hide();//边长2
                     $("#thickness").hide(); //厚度
+                    $("#thickness2").hide(); //厚度
                     $("#width").hide();//宽度
                     $("#altitude").hide();//高度
                     materialSelectId = 7;
@@ -499,6 +517,7 @@
             materialSelectArray = [];
 
             var thickness = $("#thicknessInput").val();//厚度
+            var thickness2 = $("#thickness2Input").val();//厚度
             var lengths = $("#lengthInput").val();//长度
             var width = $("#widthInput").val();//宽度
             var altitude = $("#altitudeInput").val();//高度
@@ -516,10 +535,10 @@
 
             switch (materialSelectId){
                 case 1://板
-                    materialSelectArray["thickness_Dia"] = thickness;
                     materialSelectArray["length_dim"] = lengths;
                     materialSelectArray["width_dim"] = width;
                     materialSelectArray["thickness_Dia"] = thickness;
+                    materialSelectArray["thickness2_Dia"] = thickness2;
                     materialSelectArray["if_thickness"] = memoryThickness;
                     materialSelectArray["if_length"] = memoryLength;
                     materialSelectArray["if_width"] = memoryWidth;
