--- a/application/index/view/blueprint/blueprint-infos.html
+++ b/application/index/view/blueprint/blueprint-infos.html
@@ -110,6 +110,14 @@
                 </div>
             </div>
             <div style="border:1px #D8BFD8 solid;margin:10px 0 15px 0;padding:10px 10px 10px 0;box-shadow: 10px 10px 5px #888888;" id="specia">
+                <div class="layui-form-item" id="thickness2_Dia">
+                    <label class="layui-form-label">毛坯</label>
+                    <div class="layui-input-inline">
+                        <input type="text" name="thickness2_Dia" lay-verify="required"
+                               value="{$blueprintInfo.thickness2_Dia}" placeholder="请输入"
+                               autocomplete="off" class="layui-input">
+                    </div>
+                </div>
                 <div class="layui-form-item" id="thickness_Dia">
                     <label class="layui-form-label">厚度</label>
                     <div class="layui-input-inline">
@@ -298,6 +306,7 @@
                 case "1":
                     $(".specialDiv").show();//三个保存
                     $("#thickness_Dia").show();//厚度
+                    $("#thickness2_Dia").show();//厚度
                     $("#thickness_Dia > label").text("厚度");
                     $("#length_dim").show();//长度
                     $("#length_dim > label").text("长度");
@@ -318,6 +327,7 @@
 
                     $(".specialDiv").hide();//三个保存
                     $("#thickness_Dia").hide();//厚度
+                    $("#thickness2_Dia").hide();//厚度
                     $("#specifications").hide();//规格型号
                     $("#altitudeInput").hide();//高度
                     $("#sideLength1").hide();//边长1
@@ -330,6 +340,7 @@
 
 
                     $("#thickness_Dia").hide();//厚度
+                    $("#thickness2_Dia").hide();//厚度
                     $("#thickness_Dia > label").text("腰厚");
                     $("#width_dim").hide();//宽度
                     $("#width_dim > label").text("腿宽");
@@ -343,6 +354,7 @@
                     $("#length_dim").show();//长度
                     $("#length_dim > label").text("长度");
                     $("#thickness_Dia").show();//厚度
+                    $("#thickness2_Dia").show();//厚度
                     $("#thickness_Dia > label").text("管厚");
                     $("#width_dim").show();//宽度
                     $("#width_dim > label").text("大径");
@@ -360,6 +372,7 @@
 
 
                     $("#thickness_Dia").hide();//厚度
+                    $("#thickness2_Dia").hide();//厚度
                     $("#thickness_Dia > label").text("单位重量");
                     $("#width_dim").hide();//宽度
                     $("#altitudeInput").hide();//高度
@@ -375,6 +388,7 @@
                     $("#sideLength1").hide();//边长1
                     $("#sideLength2").hide();//边长2
                     $("#thickness_Dia").hide();//厚度
+                    $("#thickness2_Dia").hide();//厚度
                     $("#width_dim").hide();//宽度
                     $("#altitudeInput").hide();//高度
                     $(".specialDiv").hide();//三个保存
@@ -385,6 +399,7 @@
                     $("#specifications").show();//规格型号
 
                     $("#thickness_Dia").hide();//厚度
+                    $("#thickness2_Dia").hide();//厚度
                     $("#thickness_Dia > label").text("厚度");
                     $("#sideLength1").hide();//边长1
                     $("#sideLength2").hide();//边长2
