--- a/application/index/view/blueprint/blueprint-info.html
+++ b/application/index/view/blueprint/blueprint-info.html
@@ -9,14 +9,14 @@
           <cite>图纸明细</cite>
         </a>
       </span>
-  <a class="layui-btn layui-btn-small" style="line-height:1.6em;margin-top:3px;float:right" href="/index/blueprint/blueprintInfo" title="刷新">
+  <a class="layui-btn layui-btn-small" style="line-height:1.6em;margin-top:3px;float:right" href="javascript:;" onclick="history.go(0)" title="刷新">
     <i class="layui-icon" style="line-height:30px">ဂ</i></a>
 </div>
 
 <div class="x-body" >
   <xblock>
     <!--<button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>&nbsp;&nbsp;&nbsp;&nbsp;-->
-    <a class="layui-btn"  target="_blank" href="{:url()}"><i class="iconfont">&#xe718;</i> 框架页面</a>
+    <a class="layui-btn"  target="_blank" href="/index/blueprint/blueprintInfo"><i class="iconfont">&#xe718;</i> 框架页面</a>
 
     <div class="layui-input-inline">
       <!--<input type="tel" id="findText" lay-verify="required|phone" autocomplete="off" placeholder="请输入关键字..." class="layui-input">-->
